Подключил css style foundation

--- a/src/templates/main.html
+++ b/src/templates/main.html
@@ -1,8 +1,10 @@
+{% load staticfiles %}
 <!DOCTYPE html>
 <html>
     <head>
         <meta charset="UTF-8">
-        <title></title>
+        <title>My Blog</title>
+        <link rel="stylesheet" type="text/css" href="{% static "css/foundation.css" %}">
     </head>
         <body>
             <h1>Мой блог</h1>
