Зона разметки добовляется

--- a/src/templates/main.html
+++ b/src/templates/main.html
@@ -8,6 +8,8 @@
     </head>
         <body>
             <h1>Мой блог</h1>
+            <div class="row">
             {% block article %}{% endblock %}
+            </div>
         </body>
 </html>
