--- a/src/article/templates/article.html
+++ b/src/article/templates/article.html
@@ -5,8 +5,10 @@
 <h2>{{ article.article_title }}</h2>
 <p>{{ article.article_text }}</p>
 <hr>
-<p>Коментарии:</p>
-{% for comment in comments %}
-    <p>{{ comment.comments_text }}</p>
-{% endfor %}
+    <div class="large-offset-1 large-8 columns">
+    <p>Коментарии:</p>
+    {% for comment in comments %}
+        <p>{{ comment.comments_text }}</p>
+    {% endfor %}
+    </div>
 {% endblock %}
