Добавил ссылку на главную страницу

--- a/src/templates/main.html
+++ b/src/templates/main.html
@@ -7,7 +7,7 @@
         <link rel="stylesheet" type="text/css" href="{% static "css/foundation.css" %}">
     </head>
         <body>
-            <h1>Мой блог</h1>
+            <h1><a href="/">Мой блог</a></h1>
             <div class="row">
             {% block article %}{% endblock %}
             </div>
