large-8, 8 из 12 места на страничке занимает

--- a/src/article/templates/articles.html
+++ b/src/article/templates/articles.html
@@ -2,6 +2,7 @@
 {% load staticfiles  %}
 
 {% block article %}
+    <div class="large-8 columns">
 {% for article in articles %}
     <h6>Дата публикации{{ article.article_date }}</h6>
     <h4><a href="/articles/get/{{ article.id }}">{{ article.article_title }}</a></h4>
