Завершил добовлять css

--- a/src/article/templates/articles.html
+++ b/src/article/templates/articles.html
@@ -10,4 +10,5 @@
     <p><img src="{% static "like2.jpg" %}" width="45px" height="30px"> {{ article.article_likes }}</p>
     <hr>
 {% endfor %}
+    </div>
 {% endblock %}
