--- a/src/templates/main.html
+++ b/src/templates/main.html
@@ -21,6 +21,7 @@
             <h1><a href="/">Мой блог</a></h1>
             <div class="row">
             {% block article %}{% endblock %}
+            {% block login %}{% endblock %}
             </div>
         </body>
 </html>
