Заготовка для Резюме

--- a/src/templates/main.html
+++ b/src/templates/main.html
@@ -16,6 +16,7 @@
                         {% else %}
                             <li><a href="/auth/login/">Войти</a></li>
                         {% endif %}
+                        <li><a href="/resume/">Резюме</a></li>
                     </ul>
                 </section>
             </div>
