--- a/src/templates/main.html
+++ b/src/templates/main.html
@@ -16,7 +16,7 @@
                         {% if username %}
                             <li ><a id="clickme" href="/auth/logout/">Выйти {{ username }}</a></li>
                         {% else %}
-                            <li><a id="clickme_in" href="/auth/login/">Войти</a></li>
+                            <li><a href="/auth/login/">Войти</a></li>
                         {% endif %}
                         <li><a href="/resume/">Резюме</a></li>
                     </ul>
