--- a/src/article/templates/articles.html
+++ b/src/article/templates/articles.html
@@ -5,6 +5,7 @@
     <div class="large-8 columns">
     {% for article in articles %}
         <h4><a href="/articles/get/{{ article.id }}">{{ article.article_title }}</a></h4>
+        <img src="/media/{{ article.article_img }}"  width="350px" height="300px">
         <p>{{ article.article_text }}</p>
         <p id="{{ article.id }}"  style="display: inline-block;"><a id="like" href="/articles/add_like/{{ article.id }}/">
             <img src="{% static "like2.jpg" %}" width="45px" height="30px"></a>
