Начал состовлять резюме

--- a/src/templates/resume.html
+++ b/src/templates/resume.html
@@ -5,6 +5,8 @@
     <title>Resume</title>
 </head>
 <body>
-    <p>Test test</p>
+    <h1><a href="/">Мой блог</a></h1>
+    <img src="../static/img/photo.jpg">
+    <h1>Каблуков Станислав Евгеньевич</h1>
 </body>
 </html>
