--- a/src/templates/resume.html
+++ b/src/templates/resume.html
@@ -3,10 +3,87 @@
 <head>
     <meta charset="UTF-8">
     <title>Resume</title>
+    <link rel="stylesheet" type="text/css" href="../static/css/my_css.css">
 </head>
 <body>
-    <h1><a href="/">Мой блог</a></h1>
-    <img src="../static/img/photo.jpg">
-    <h1>Каблуков Станислав Евгеньевич</h1>
+{#    <section style="background-color: red">#}
+{#        <p><a href="/">Мой блог</a></p>#}
+{#    </section>#}
+    <div id="left_panel">
+
+        <div id="avatar">
+            <img id="main" src="../static/img/photo.jpg" width="150px" height="150px">
+            <h2>Каблуков <br>Станислав </h2>
+            <h3>Python developer</h3>
+        </div>
+
+        <div id="contact_info">
+            <p><img src="../static/img/mail.png"> stasdolg@mail.ru</p>
+            <p><img src="../static/img/vk.png"> https://vk.com/stasonst19</p>
+            <p><img src="../static/img/phone.png"> 89230171838</p>
+            <p><img src="../static/img/geo.png"> Новосибирск, <br>ул Кавалерийская</p>
+            <p><img src="../static/img/skype.png"> stasonst1992</p>
+        </div>
+
+        <p> Я лидер. Умею вести <br>за собой команду,<br>решать сложные задачи <br>и ни когда не сдаваться!</p>
+
+        <div id="about_me">
+            <h3><img src="">О СЕБЕ</h3>
+            <p>Мне 23 года, холост</p>
+            <p>Владею базовым английским языком</p>
+            <p>Увлекаюсь спортом: Баскетбол, Волейбол.</p>
+            <p>Посещаю тренажерный зал</p>
+            <p>Читаю книги</p>
+            <p>Готов к переезду</p>
+        </div>
+
+        <div id="exp">
+            <h3>ЦЕННЫЙ ОПЫТ И УМЕНИЯ</h3>
+            <p>Разработка user friendly интерфейсов</p>
+            <p>Техническая поддержка пользователей по проблеме <br> связанной с компиляцией приложения</p>
+        </div>
+    </div>
+
+    <div id="center_panel" style="float: left;">
+        <div id="work_exp">
+            <h3><img src=""> ОПЫТ РАБОТЫ</h3>
+            <p>Academ media</p>
+        </div>
+
+        <div id="skill">
+            <h3>ПРОФЕССИОНАЛЬНЕ НАВЫКИ</h3>
+            <p>Управление</p>
+            <p>Планирование</p>
+            <p>Делегирование</p>
+            <p>Переговоры</p>
+        </div>
+
+        <div id="my_skill">
+            <h3>ЛИЧНЫЕ КАЧЕСТВА</h3>
+            <p>Лидерство</p>
+            <p>Оптимизм</p>
+            <p>Ответственность</p>
+            <p>Гибкость</p>
+            <p>Настойчивость</p>
+        </div>
+
+        <div id="weapon">
+            <h3>ИНСТРУМЕНТЫ ДЛЯ РАЗРАБОТКИ</h3>
+            <p>Python</p>
+            <p>Django</p>
+            <p>JavaScript</p>
+            <p>HTML</p>
+            <p>CSS</p>
+            <p>Objective C</p>
+            <p>Kivy</p>
+            <p>Ruby</p>
+        </div>
+        <div>
+            <h3><img src="">ОБРАЗОВАНИЕ</h3>
+            <p>ИНЖЕНЕР</p>
+            <p>ПРОГРАМИСТ</p>
+
+        </div>
+    </div>
 </body>
 </html>
