Доделал css для резюме

--- a/src/templates/resume.html
+++ b/src/templates/resume.html
@@ -12,14 +12,14 @@
     <div id="left_panel">
 
         <div id="avatar">
-            <img id="main" src="../static/img/photo.jpg" width="150px" height="150px">
+            <img id="main" src="../static/img/photo.png" width="150px" height="150px">
             <h2>Каблуков <br>Станислав </h2>
             <h3>Python developer</h3>
         </div>
 
         <div id="contact_info">
             <p><img src="../static/img/mail.png"> stasdolg@mail.ru</p>
-            <p><img src="../static/img/vk.png"> https://vk.com/stasonst19</p>
+            <p><img src="../static/img/vk.png"><a href="https://vk.com/stasonst19">https://vk.com/stasonst19</a></p>
             <p><img src="../static/img/phone.png"> 89230171838</p>
             <p><img src="../static/img/geo.png"> Новосибирск, <br>ул Кавалерийская</p>
             <p><img src="../static/img/skype.png"> stasonst1992</p>
@@ -28,61 +28,161 @@
         <p> Я лидер. Умею вести <br>за собой команду,<br>решать сложные задачи <br>и ни когда не сдаваться!</p>
 
         <div id="about_me">
-            <h3><img src="">О СЕБЕ</h3>
+            <h3><img src="../static/img/basket.png">О СЕБЕ</h3>
             <p>Мне 23 года, холост</p>
             <p>Владею базовым английским языком</p>
             <p>Увлекаюсь спортом: Баскетбол, Волейбол.</p>
             <p>Посещаю тренажерный зал</p>
             <p>Читаю книги</p>
+            <p>Вредных привычек не имею</p>
+            <p>Не работаю много - работаю хорошо.</p>
             <p>Готов к переезду</p>
         </div>
 
         <div id="exp">
             <h3>ЦЕННЫЙ ОПЫТ И УМЕНИЯ</h3>
             <p>Разработка user friendly интерфейсов</p>
-            <p>Техническая поддержка пользователей по проблеме <br> связанной с компиляцией приложения</p>
+            <p>Техническая поддержка пользователей<br> по проблеме <br> связанной с компиляцией приложения</p>
+            <p>Пример исходников этого сайта: <br><a href="https://github.com/HunterOnToss/blog">
+                https://github.com/HunterOnToss/blog.git</a></p>
+            <p>Презентация по kivy фреймворку:<br>
+                <a href="http://slides.com/hunterontoss/kivy#/">http://slides.com/hunterontoss/kivy#/</a></p>
+            <p>Изучаю flask:<br>
+                <a href="https://github.com/HunterOnToss/flask">https://github.com/HunterOnToss/flask</a></p>
+            <h4>Собственные приложения на Kivy</h4>
+            <p>Крестики нолики:<br>
+                <a href="https://github.com/HunterOnToss/krestiki">https://github.com/HunterOnToss/krestiki></a></p>
+            <p>Погода онлайн:<br>
+                <a href="https://github.com/HunterOnToss/kivy_learn">https://github.com/HunterOnToss/kivy_learn</a></p>
+            <p>Менеджер звуков:<br><a href="https://github.com/HunterOnToss/ios_kivy_sc_sound">
+                github.com/HunterOnToss/ios_kivy_sc_sound
+            </a></p>
+        </div>
+
+        <h4>Знание ОС</h4>
+        <div id="params">
+            <p>Linux<br><img id="rating" src="../static/img/rating/ranting_5.png"></p>
+            <p>Wimdows<br><img id="rating" src="../static/img/rating/ranting_5.png"></p>
+            <p>Mac os x<br><img id="rating" src="../static/img/rating/ranting_5.png"></p>
         </div>
     </div>
 
     <div id="center_panel" style="float: left;">
         <div id="work_exp">
-            <h3><img src=""> ОПЫТ РАБОТЫ</h3>
-            <p>Academ media</p>
+            <h3><img src="../static/img/suitcase_travel.png"> ОПЫТ РАБОТЫ</h3>
+            <div id="params">
+                <h4>Web разработчик</h4>
+                <h4>Разработчик <br>мобильных<br> приложений</h4>
+                <a href="http://academmedia.com/">http://academmedia.com/</a>
+                <p>07.2014 - 10.2015</p>
+            </div>
+            <div id="params_rating">
+                <h4>ООО "Academ media"</h4>
+                <p>Проекты связанные с созданием сервисов<br> для поддержки производства мобильных приложений</p>
+                <ol>
+                    <li> Проекты:
+                        <ul>
+                            <li>База данных мобильных приложений.</li>
+                            <li>Сервис для хранения, редактирования и добавления переводов</li>
+                            <li>Сервис для взаимосдествия между отделами</li>
+                            <li>Сервис для компиляции iOs приложений</li>
+                            <li>Сервис для компиляции Android приложений</li>
+                            <li>Сервис для компиляции Windows приложений</li>
+                            <li>Сервис для компиляции Unity исходников</li>
+                        </ul>
+                    </li>
+                    <li> Навыки:
+                        <ul>
+                            <li>Имею опыт управления командой (~4 человека) разработчиков</li>
+                            <li>Создание распределенной системы (builder)<br> используя технологии RabbitMQ или Redis, Celery</li>
+                            <li>Знаком с рекламными сетями (Mopub, AdMob, Amazon)<br> и способ интегрирования данных сетей</li>
+                        </ul>
+                    </li>
+                </ol>
+            </div>
+
         </div>
 
         <div id="skill">
             <h3>ПРОФЕССИОНАЛЬНЕ НАВЫКИ</h3>
-            <p>Управление</p>
-            <p>Планирование</p>
-            <p>Делегирование</p>
-            <p>Переговоры</p>
+            <div id="params">
+                <p>Управление</p>
+                <p>Планирование</p>
+                <p>Делегирование</p>
+                <p>Переговоры</p>
+            </div>
+            <div id="params_rating">
+                <p><img id="rating" src="../static/img/rating/ranting_5.png"></p>
+                <p><img id="rating" src="../static/img/rating/ranting_3.png"></p>
+                <p><img id="rating" src="../static/img/rating/ranting_4.png"></p>
+                <p><img id="rating" src="../static/img/rating/ranting_4.png"></p>
+            </div>
         </div>
 
         <div id="my_skill">
             <h3>ЛИЧНЫЕ КАЧЕСТВА</h3>
-            <p>Лидерство</p>
-            <p>Оптимизм</p>
-            <p>Ответственность</p>
-            <p>Гибкость</p>
-            <p>Настойчивость</p>
+            <div id="params">
+                <p>Лидерство</p>
+                <p>Оптимизм</p>
+                <p>Ответственность</p>
+                <p>Гибкость</p>
+                <p>Настойчивость</p>
+            </div>
+            <div id="params_rating">
+                <p><img id="rating" src="../static/img/rating/ranting_5.png"></p>
+                <p><img id="rating" src="../static/img/rating/ranting_5.png"></p>
+                <p><img id="rating" src="../static/img/rating/ranting_5.png"></p>
+                <p><img id="rating" src="../static/img/rating/ranting_4.png"></p>
+                <p><img id="rating" src="../static/img/rating/ranting_4.png"></p>
+            </div>
         </div>
 
         <div id="weapon">
             <h3>ИНСТРУМЕНТЫ ДЛЯ РАЗРАБОТКИ</h3>
-            <p>Python</p>
-            <p>Django</p>
-            <p>JavaScript</p>
-            <p>HTML</p>
-            <p>CSS</p>
-            <p>Objective C</p>
-            <p>Kivy</p>
-            <p>Ruby</p>
+            <div id="params">
+                <p>Python</p>
+                <p>Django</p>
+                <p>JavaScript</p>
+                <p>jQuery</p>
+                <p>ExtJS</p>
+                <p>HTML</p>
+                <p>CSS</p>
+                <p>Objective C</p>
+                <p>Kivy</p>
+                <p>Git</p>
+                <p>Ruby</p>
+            </div>
+            <div id="params_rating">
+                <p><img id="rating" src="../static/img/rating/ranting_5.png"></p>
+                <p><img id="rating" src="../static/img/rating/ranting_5.png"></p>
+                <p><img id="rating" src="../static/img/rating/ranting_4.png"></p>
+                <p><img id="rating" src="../static/img/rating/ranting_5.png"></p>
+                <p><img id="rating" src="../static/img/rating/ranting_4.png"></p>
+                <p><img id="rating" src="../static/img/rating/ranting_5.png"></p>
+                <p><img id="rating" src="../static/img/rating/ranting_4.png"></p>
+                <p><img id="rating" src="../static/img/rating/ranting_3.png"></p>
+                <p><img id="rating" src="../static/img/rating/ranting_5.png"></p>
+                <p><img id="rating" src="../static/img/rating/ranting_4.png"></p>
+                <p><img id="rating" src="../static/img/rating/ranting_3.png"></p>
+            </div>
         </div>
-        <div>
-            <h3><img src="">ОБРАЗОВАНИЕ</h3>
-            <p>ИНЖЕНЕР</p>
-            <p>ПРОГРАМИСТ</p>
-
+        <h3><img src="../static/img/academ.png">ОБРАЗОВАНИЕ</h3>
+        <div >
+            <div id="rating">
+                <br>
+                <h4>ИНЖЕНЕР</h4>
+                <p>2008-2012</p>
+                <br>
+                <h4>ПРОГРАМИСТ</h4>
+                <p>2012-2015</p>
+            </div>
+            <div id="params_rating">
+                <h4>Новосибирский авиационный технический колледж</h4>
+                <p>Cредне специальное образование.<br>Компьютерные системы и комплексы</p>
+                <br>
+                <h4>Сибирский государственный университет телекоммуникаций и информатики.</h4>
+                <p>Высшее образование. Факультет информатики и вычислительной техники</p>
+            </div>
         </div>
     </div>
 </body>
