--- a/src/static/css/my_css.css
+++ b/src/static/css/my_css.css
@@ -5,21 +5,21 @@ body {
   font-family: Droid Sans, Arial, sans-serif;;
   font-style: normal;
   font-weight: normal;
+  font-size: 16px;
   line-height: 1;
   margin: 0;
   padding: 0;
-  position: relative; }
+   }
 
 #left_panel {
     background-color: #b9b9b9;
     float: left;
-    box-sizing: border-box;
-    padding: 50px;
+    padding: 40px 50px 70px 55px;
+
 }
 
 #center_panel {
-    box-sizing: border-box;
-    padding: 50px;
+    padding: 40px 100px 1px 50px;
 }
 
 h3 {
@@ -34,4 +34,19 @@ img {
 #main {
     width: 150px;
     height: 150px;
+}
+
+#rating {
+    width: 90px;
+    height: 14px;
+}
+
+
+#params {
+    float: left;
+}
+
+#params_rating {
+    padding: 1px 1px 10px 190px;
+
 }
