Убрал лишний символ

--- a/src/templates/resume.html
+++ b/src/templates/resume.html
@@ -51,7 +51,7 @@
                 <a href="https://github.com/HunterOnToss/flask">https://github.com/HunterOnToss/flask</a></p>
             <h4>Собственные приложения на Kivy</h4>
             <p>Крестики нолики:<br>
-                <a href="https://github.com/HunterOnToss/krestiki">https://github.com/HunterOnToss/krestiki></a></p>
+                <a href="https://github.com/HunterOnToss/krestiki">https://github.com/HunterOnToss/krestiki</a></p>
             <p>Погода онлайн:<br>
                 <a href="https://github.com/HunterOnToss/kivy_learn">https://github.com/HunterOnToss/kivy_learn</a></p>
             <p>Менеджер звуков:<br><a href="https://github.com/HunterOnToss/ios_kivy_sc_sound">
