удалил лишнее, попытался сменить дизайн, потом займусь

--- a/src/article/templates/article.html
+++ b/src/article/templates/article.html
@@ -19,7 +19,7 @@
         {% csrf_token %}
         {{ form }}
          <div id="results"></div>
-        <input type="submit" class="button" value="Добавить коментарий">
+        <input type="submit" class="button round" value="Добавить коментарий">
     </form>
     {% endif %}
 
