--- a/src/templates/main.html
+++ b/src/templates/main.html
@@ -23,31 +23,18 @@
       document.body.setAttribute('style', 'background-image: '+pattern.dataUrl);
     });
     </script>
-      <style type="text/css">
-      .comment{
-        background:rgba(255,255,255,1);
-        padding: 8px;
-        margin-bottom:5px;
-        border:none;
-      }
-      .white{
-        background:rgba(255,255,255,1);
-        padding-top: 10px;
-        border:none;
-      }
-      .commentcenter{
-        position:relative;
-        left:43%;
-      }
-      input.textarea:focus{
-        height:1.5em;
-        resize:none;
-      }
-      textarea{
-        height:1.5em;
-        resize:none;
-      }
-    </style>
+{#      <style type="text/css">#}
+{#      body {#}
+{#          background: url("{% static "img/fon_green.jpg" %}") center top fixed no-repeat;#}
+{#          -moz-background-size: 100%; /* Firefox 3.6+ */#}
+{#          -webkit-background-size: 100%; /* Safari 3.1+ и Chrome 4.0+ */#}
+{#          -o-background-size: 100%; /* Opera 9.6+ */#}
+{#          background-size: 100%;#}
+{#      }#}
+{#      a {#}
+{#          color: darkblue;#}
+{#      }#}
+{#      </style>#}
     </head>
         <body>
             <div class="top-bar" style="background-color: darkslateblue">
