--- a/src/templates/resume.html
+++ b/src/templates/resume.html
@@ -6,9 +6,8 @@
     <link rel="stylesheet" type="text/css" href="../static/css/my_css.css">
 </head>
 <body>
-{#    <section style="background-color: red">#}
-{#        <p><a href="/">Мой блог</a></p>#}
-{#    </section>#}
+    <a href="/" class="top-bar"><img src="../static/img/knopka.png"></a>
+
     <div id="left_panel">
 
         <div id="avatar">
