--- a/src/templates/resume.html
+++ b/src/templates/resume.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" type="text/css" href="../static/css/my_css.css">
 </head>
 <body>
-    <a href="/" class="top-bar"><img src="../static/img/knopka.png"></a>
+    <a href="/" class="top-bar"><img src="../static/img/my_blog.png"></a>
 
     <div id="left_panel">
 
