Сменил дизайн кнопок и сделал оранжевые ссылки

--- a/src/static/css/my_css.css
+++ b/src/static/css/my_css.css
@@ -55,9 +55,9 @@ a {
     color: black;
 }
 
-/*a:visited {*/
-    /*color: orangered;*/
-/*}*/
+a:visited {
+    color: orangered;
+}
 
 .top-bar {
     position: fixed;
