--- a/src/templates/main.html
+++ b/src/templates/main.html
@@ -20,7 +20,7 @@
       };
       var t = new Trianglify(ops);
       var pattern = t.generate(document.body.clientWidth, document.body.clientHeight);
-      document.body.setAttribute('style', 'background: '+pattern.dataUrl + ' center top fixed no-repeat');
+      document.body.setAttribute('style', 'background: '+pattern.dataUrl + ' center top fixed no-repeat;');
 
     });
     </script>
@@ -34,8 +34,8 @@
                     type: "POST",
                     data: "",
                     dataType: "json",
-                    success: $("a#clickme").replaceWith('<a href="/auth/login/" style="height: 60px">' +
-                        '<img src="{% static "img/enter.png" %}"></a></li>')
+                    success: $("a#clickme").replaceWith('<a href="/auth/login/">' +
+                        '<img src="{% static "img/button/enter.png" %}"></a></li>')
                 });
             });
 
@@ -43,20 +43,18 @@
     </script>
     </head>
         <body>
-            <div class="top-bar" style="position: fixed; top: 0; width: 100%; height: 60px">
+            <div class="top-bar" style="position: fixed; top: 0; width: 100%; height: 50px">
                 <section class="top-bar-section">
-                    <ul class="left">
-                        <li>
-                            <a href="/" style="height: 60px"><img src="{% static "img/my_blog.png" %}"></a>
-                        </li>
-                    </ul>
                     <ul class="right">
                         {% if username %}
-                            <li ><a id="clickme" href="/auth/logout/" style="height: 60px"><img src="{% static "img/exit.png" %}"></a></li>
+                            <li ><a id="clickme" href="/auth/logout/"><img src="{% static "img/button/exit.png" %}"></a></li>
                         {% else %}
-                            <li><a href="/auth/login/" style="height: 60px"><img src="{% static "img/enter.png" %}"></a></li>
+                            <li><a href="/auth/login/"><img src="{% static "img/button/enter.png" %}"></a></li>
                         {% endif %}
-                        <li><a href="/resume/" style="height: 60px"><img src="{% static "img/rezume.png" %}"></a></li>
+                        <li><a href="/resume/"><img src="{% static "img/button/resume.png" %}"></a></li>
+                        <li>
+                            <a href="/"><img src="{% static "img/button/my_blog.png" %}"></a>
+                        </li>
                     </ul>
                 </section>
             </div>
