--- a/src/templates/main.html
+++ b/src/templates/main.html
@@ -45,6 +45,9 @@
         <body>
             <div class="top-bar" style="position: fixed; top: 0; width: 100%; height: 50px">
                 <section class="top-bar-section">
+                    <ul class="left">
+                        <li><a href="/"><img src="{% static "img/button/red.png" %}"></a></li>
+                    </ul>
                     <ul class="right">
                         {% if username %}
                             <li ><a id="clickme" href="/auth/logout/"><img src="{% static "img/button/exit.png" %}"></a></li>
