Переделал стиль под черно золотой

--- a/src/templates/main.html
+++ b/src/templates/main.html
@@ -28,12 +28,12 @@
     </script>
     <style>
         body {
-            background:  url({% static "img/fon/BG.jpg" %}) center top fixed no-repeat;
-            background-size: 85% 100%;
+            background:  url({% static "img/fon/golden_armada/gold_armada_fon.jpg" %}) center top fixed no-repeat;
+            background-size: 100% 100%;
         }
-
         #my_article {
-            padding: 70px 0 0 50px
+            padding: 70px 0 0 50px;
+            background: url({% static "img/fon/wallpaper-dark.jpg" %}) center top fixed no-repeat;
         }
 
         #my_top_bar {
@@ -43,24 +43,30 @@
             height: 50px;
         }
         p {
-            color: #D1DE45;
+{#            color: #D1DE45;#}
+            color: black;
         }
         h2{
-            color: #C21111;
+{#            color: #C21111;#}
+            color: black;
         }
         h4 {
-            color: #4ADDED;
+{#            color: #4ADDED;#}
+             color: black;
         }
 
+
         h6 {
-            color: #4AEDDD;
+{#            color: #4AEDDD;#}
+             color: black;
         }
 
         #my_comments {
             color: #3DC211;
         }
         a {
-            color: orangered;
+{#            color: orangered;#}
+             color: black;
         }
     </style>
     </head>
