--- a/src/templates/main.html
+++ b/src/templates/main.html
@@ -77,6 +77,7 @@
                         <li><a id="red_button" href="/"><img src="{% static "img/button/red.png" %}"></a></li>
                     </ul>
                     <ul class="right">
+                        <li><a href="/learn/"><img src="{% static "img/button/learn.png" %}"></a></li>
                         {% if username %}
                             <li ><a id="clickme" href="/auth/logout/"><img src="{% static "img/button/exit.png" %}"></a></li>
                         {% else %}
