--- a/src/templates/main.html
+++ b/src/templates/main.html
@@ -27,8 +27,8 @@
             });
     </script>
     </head>
-{#        <body style="background: url({% static "img/fon/purple_sky.jpg" %}) center top fixed no-repeat;background-size: 80%">#}
-          <body>
+        <body style="background: url({% static "img/fon/BG.jpg" %}) center top fixed no-repeat;
+                background-size: 85% 100%">
             <div class="top-bar" style="position: fixed; top: 0; width: 100%; height: 50px">
                 <section class="top-bar-section">
                     <ul class="left">
