--- a/src/templates/main.html
+++ b/src/templates/main.html
@@ -26,10 +26,46 @@
 
             });
     </script>
+    <style>
+        body {
+            background:  url({% static "img/fon/BG.jpg" %}) center top fixed no-repeat;
+            background-size: 85% 100%;
+        }
+
+        #my_article {
+            padding: 70px 0 0 50px
+        }
+
+        #my_top_bar {
+            position: fixed;
+            top: 0;
+            width: 100%;
+            height: 50px;
+        }
+        p {
+            color: #D1DE45;
+        }
+        h2{
+            color: #C21111;
+        }
+        h4 {
+            color: #4ADDED;
+        }
+
+        h6 {
+            color: #4AEDDD;
+        }
+
+        #my_comments {
+            color: #3DC211;
+        }
+        a {
+            color: orangered;
+        }
+    </style>
     </head>
-        <body style="background: url({% static "img/fon/BG.jpg" %}) center top fixed no-repeat;
-                background-size: 85% 100%">
-            <div class="top-bar" style="position: fixed; top: 0; width: 100%; height: 50px">
+        <body>
+            <div class="top-bar" id="my_top_bar">
                 <section class="top-bar-section">
                     <ul class="left">
                         <li><a id="red_button" href="/"><img src="{% static "img/button/red.png" %}"></a></li>
@@ -47,7 +83,7 @@
                     </ul>
                 </section>
             </div>
-            <div class="row" style="padding: 70px 0 0 50px">
+            <div class="row" id="my_article">
             {% block article %}{% endblock %}
             {% block login %}{% endblock %}
             </div>
