поменял css стиль

--- a/src/templates/main.html
+++ b/src/templates/main.html
@@ -43,30 +43,25 @@
             height: 50px;
         }
         p {
-{#            color: #D1DE45;#}
-            color: black;
+            color: #D1DE45;
         }
         h2{
-{#            color: #C21111;#}
-            color: black;
+            color: #41C221;
         }
         h4 {
-{#            color: #4ADDED;#}
-             color: black;
+            color: #4ADDED;
         }
 
 
         h6 {
-{#            color: #4AEDDD;#}
-             color: black;
+            color: #4AEDDD;
         }
 
         #my_comments {
             color: #3DC211;
         }
         a {
-{#            color: orangered;#}
-             color: black;
+            color: orangered;
         }
     </style>
     </head>
