Изменил цвет ссылок

--- a/src/templates/main.html
+++ b/src/templates/main.html
@@ -43,7 +43,7 @@
             height: 50px;
         }
         p {
-            color: #D1DE45;
+            color: #E1E80E;
         }
         h2{
             color: #41C221;
@@ -58,10 +58,13 @@
         }
 
         #my_comments {
-            color: #3DC211;
+            color: #E1E80E;
         }
         a {
             color: orangered;
+        }
+        a:hover {
+            color: #E1E80E;
         }
     </style>
     </head>
