--- a/src/article/templates/article.html
+++ b/src/article/templates/article.html
@@ -8,7 +8,7 @@
     <p>{{ article.article_text }}</p>
     <h4>{{ article.article_date }}</h4>
 <hr>
-    <div class="large-offset-1 large-8 columns">
+    <div class="large-offset-1 large-8">
     <p id="my_comments">Коментарии:</p>
     {% for comment in comments %}
         <p id="my_comments">{{ comment.comments_text }}</p>
