--- a/src/templates/main.html
+++ b/src/templates/main.html
@@ -32,7 +32,7 @@
             background-size: 100% 100%;
         }
         #my_article {
-            padding: 70px 0 0 50px;
+            padding: 70px 20px 0 50px;
             background: url({% static "img/fon/wallpaper-dark.jpg" %}) center top fixed no-repeat;
         }
 
@@ -41,6 +41,9 @@
             top: 0;
             width: 100%;
             height: 50px;
+        }
+        label {
+            color: #E1E80E;
         }
         p {
             color: #E1E80E;
