init cross browser css

--- a/src/templates/main.html
+++ b/src/templates/main.html
@@ -85,6 +85,7 @@
                             <li><a href="/auth/login/"><img src="{% static "img/button/enter.png" %}"></a></li>
                         {% endif %}
                         <li><a href="/resume/"><img src="{% static "img/button/resume.png" %}"></a></li>
+                        <li><a href="/cross_browser/"><img src="{% static "" %}"></a></li>
                         <li>
                             <a href="/"><img src="{% static "img/button/my_blog.png" %}"></a>
                         </li>
