--- a/src/static/css/cross_browser.css
+++ b/src/static/css/cross_browser.css
@@ -11,6 +11,16 @@
         width: 1500px;
         height: 1250px;
     }
+
+    .container {
+        background: url(../img/images/background.jpg);
+        background-size: 100% 100%;
+        position: absolute;
+        top: 240px;
+        left: 231px;
+        height: 768px;
+        width: 1024px;
+    }
 }
 
 @media only screen and (min-width: 768px) and (max-width: 1024px) {
@@ -19,6 +29,17 @@
         width: 1250px;
         height: 1500px;
     }
+
+    .container {
+        background: url(../img/images/background.jpg);
+        background-size: 100% 100%;
+        position: absolute;
+        top: 232px;
+        left: 242px;
+        height: 1024px;
+        width: 768px;
+    }
+
 }
 
 @media only screen and (min-width: 568px) and (max-width: 768px) {
@@ -27,6 +48,16 @@
         width: 1800px;
         height: 1000px;
     }
+
+    .container {
+        background: url(../img/images/background.jpg);
+        background-size: 100% 100%;
+        position: absolute;
+        top: 182px;
+        left: 328px;
+        height: 640px;
+        width: 1136px;
+    }
 }
 
 @media only screen and (min-width: 320px) and (max-width: 568px) {
@@ -34,5 +65,15 @@
         background: url(../img/images/iphone5-vertical.png) no-repeat;
         width: 1000px;
         height: 1800px;
+    }
+
+    .container {
+        background: url(../img/images/background.jpg);
+        background-size: 100% 100%;
+        position: absolute;
+        top: 328px;
+        left: 184px;
+        height: 1136px;
+        width: 640px;
     }
 }
